crates/tesshir/tests/fixtures/package/type_error/src/math.tess
struct Point {
    x: i32,
}

fn sum(p: Point) -> i32 {
    p.x + true
}
